fixed nav/page overlap on home screen

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,14 +21,12 @@
   margin: 0;
   div {
     padding:0;
-    margin-top: -50px;
     height: 102vh;
   }
   .show-for-landscape {
     background-image: url(../images/Jetty-carousel.jpg);
     background-size: 100vw;
     position: absolute;
-    // background-position-x: -42px;
     background-repeat: no-repeat;
     @media (min-width: 880px) {
       background-position-x: 0;
@@ -37,7 +35,6 @@
   .show-for-portrait {
     background-image: url(../images/california-street.jpg);
     background-size: 100vh;
-    // background-position-x: -132px;
     background-repeat: no-repeat;
     position: absolute;
   }
@@ -45,16 +42,16 @@
 .index-text {
   max-width: none;
   margin: 0;
-  // position: absolute;
   margin-top: 10%;
   text-align: center;
 
   h1, h4 {
     color: floralwhite;
-    opacity: .8;
+    // opacity: 0.8;
     text-shadow: 0 0 4px black
   }
   .title-box {
     border: 2px solid white;
+    background-color: rgba(64,64,64,0.2);
   }
 }
